@@ -24,14 +24,15 @@
 enum insertion_type
 { 
   cartouche, copying, defcv, deffn, defivar, defmac, defmethod, defop,
-  defopt, defspec, deftp, deftypefn, deftypefun, deftypeivar,
+  defopt, defspec, deftp, deftypecv, deftypefn, deftypefun, deftypeivar,
   deftypemethod, deftypeop, deftypevar, deftypevr, defun, defvar, defvr,
   detailmenu, direntry, display, documentdescription, enumerate,
-  example, flushleft, flushright, format, ftable, group, ifclear, ifdocbook,
-  ifhtml, ifinfo, ifnotdocbook, ifnothtml, ifnotinfo, ifnotplaintext, ifnottex,
-  ifnotxml, ifplaintext, ifset, iftex, ifxml, itemize, lisp, menu, multitable,
-  quotation, rawhtml, rawtex, smalldisplay, smallexample, smallformat, smalllisp,
-  verbatim, table, tex, vtable, titlepage, bad_type
+  example, flushleft, flushright, format, ftable, group, ifclear,
+  ifdocbook, ifhtml, ifinfo, ifnotdocbook, ifnothtml, ifnotinfo,
+  ifnotplaintext, ifnottex, ifnotxml, ifplaintext, ifset, iftex, ifxml,
+  itemize, lisp, menu, multitable, quotation, rawhtml, rawtex,
+  smalldisplay, smallexample, smallformat, smalllisp, verbatim, table,
+  tex, vtable, titlepage, bad_type
 };
 
 typedef struct istack_elt
